[tool.poetry]
name = "neural-networks-with-python"
version = "0.1.0"
description = "From the book Neuronale Netze programmieren mit Python"
authors = ["Josef-Maximilian Luge <josefluge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
